# cereus-rex

./: .env.example  Cargo.toml  Dockerfile  README.md  config-examples.md  docker-compose.yml
config/: default.toml
examples/: mcp_client_example.rs  simple_client.rs
src/: lib.rs  main.rs  mcp_server.rs
src/agents/: mod.rs  sync.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  types.rs
src/rag/: client.rs  mod.rs
src/tools/: code_context.rs  filesystem.rs  mod.rs  search.rs
src/utils/: config.rs  mod.rs
