[package]
name = "cerebus-rex"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for AI coding agents with RAG integration"
authors = ["Estia AI Team"]
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15.19"
thiserror = "2.0.17"
anyhow = "1.0"
qdrant-client = { version = "1.16.0" }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
bytes = "1.0"
dashmap = "6.1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = "0.28.0"
url = "2.0"
futures-util = "0.3"
rmcp = { version = "0.9.0", features = ["server"] }
async-trait = "0.1"
